fix home layout on mobile

--- a/app/assets/stylesheets/site-landing.scss
+++ b/app/assets/stylesheets/site-landing.scss
@@ -1,6 +1,7 @@
 @import 'mixins';
 .site-landing{
   margin-bottom: 75px;
+  overflow: hidden;
   .site-landing-image-background{
     color: white;
     height: 551px;
